--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,8 @@
 .header {
     max-width: 880px;
     margin: 45px auto 0;
-    border-bottom: 1px solid #545454;
+    border-bottom: 1px solid rgba(84, 84, 84, 1);
+    ;
 }
 
 @media screen and (max-width: 900px) {
