--- a/blocks/popup/__button-save/popup__button-save.css
+++ b/blocks/popup/__button-save/popup__button-save.css
@@ -1,7 +1,7 @@
 .popup__button-save {
   width: 358px;
   height: 50px;
-  margin: 43px auto 37px;
+  margin: 13px auto 37px;
   padding: 0;
   border: none;
   background: #000000;
@@ -12,16 +12,17 @@
   line-height: 22px;
   text-align: center;
   color: #FFFFFF;
+  cursor: pointer;
 }
 
 .popup__button-save:hover {
-  opacity: o.6;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
   .popup__button-save {
     max-width: 238px;
-    margin: 45px auto 25px;
+    margin: 5px auto 25px;
     font-size: 14px;
     line-height: 17px;
   }
