--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -8,10 +8,11 @@
     position: absolute;
     top: -40px;
     right: -40px;
-    background-color: black;
+    background-color: transparent;
     background-image: url(../../../images/CloseIcon.svg);
     background-repeat: no-repeat;
     background-size: cover;
+    cursor: pointer;
 }
 
 
