--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -9,5 +9,6 @@
 @media screen and (max-width: 569px) and (min-width: 320px) {
   .popup__container {
     max-width: 282px;
+    min-height: 322px;
   }
 }
