--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,4 +1,4 @@
-.profile__addButton {
+.profile__add-button {
     width: 150px;
     height: 50px;
     margin-right: 0;
@@ -6,20 +6,22 @@
     padding: 0;
     border: 2px solid #FFFFFF;
     border-radius: 2px;
-    background-color: #000000;
+    background-color: transparent;
     background-image: url(../../../images/vector.svg);
     background-repeat: no-repeat;
     background-position: 50%;
+    cursor: pointer;
 }
 
-.profile__addButton:hover {
+.profile__add-button:hover {
     opacity: 0.6;
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
-    .profile__addButton {
+    .profile__add-button {
         width: 282px;
         width: 100%;
         margin: 32px 0 0;
+        background-size: 16px;
     }
 }
