--- a/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -1,4 +1,4 @@
-.profile__info-editButton {
+.profile__info-edit-button {
     width: 24px;
     height: 24px;
     margin-left: 18px;
@@ -6,15 +6,16 @@
     background-image: url(../../../images/pencil.svg);
     background-position: center;
     background-repeat: no-repeat;
-    background-color: #000000;
+    background-color: transparent;
+    cursor: pointer;
 }
 
-.profile__info-editButton:hover {
+.profile__info-edit-button:hover {
     opacity: 0.6;
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
-    .profile__info-editButton {
+    .profile__info-edit-button {
         width: 18px;
         height: 18px;
         margin: 8px 19px 0 10px;
