--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -6,6 +6,9 @@
     font-size: 42px;
     line-height: 48px;
     color: #FFFF;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
   }
 
 @media screen and (max-width: 900px) and (min-width: 570px) {
