--- a/blocks/element/__title/element__title.css
+++ b/blocks/element/__title/element__title.css
@@ -1,6 +1,6 @@
 .element__title {
     max-width: 246px;
-    margin: 25px auto 31px 21px;
+    margin: 25px auto 29px 21px;
     font-style: normal;
     font-weight: 900;
     font-size: 24px;
@@ -10,3 +10,9 @@
     white-space: nowrap;
     overflow: hidden;
  }
+
+@media screen and (max-width: 320px) {
+    .element__title {
+        margin: 25px auto 25px 21px;
+    }
+}
