--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -20,6 +20,7 @@
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
   .profile__title {
+    max-width: 189px;
     font-size: 27px;
     line-height: 33px;
   }
