--- a/blocks/element/__description/element__description.css
+++ b/blocks/element/__description/element__description.css
@@ -1,6 +1,7 @@
 .element__description {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #FFFFFF;
+    width: 100%;
 }
