--- a/blocks/popup-photo/popup-photo.css
+++ b/blocks/popup-photo/popup-photo.css
@@ -1,7 +1,7 @@
-.popup {
+.popup-photo {
+    display: flex;
     width: 100%;
     height: 100%;
-    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
