--- a/blocks/card-popup/__form-input/card-popup__form-input.css
+++ b/blocks/card-popup/__form-input/card-popup__form-input.css
@@ -1,4 +1,4 @@
-.popup-photo__form-input {
+.card-popup__form-input {
     width: 358px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
@@ -15,7 +15,7 @@
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
-    .popup-photo__form-input {
+    .card-popup__form-input {
         max-width: 238px;
     }
 }
