--- a/blocks/card-popup/__container/card-popup__container.css
+++ b/blocks/card-popup/__container/card-popup__container.css
@@ -1,4 +1,4 @@
-.popup__container {
+.card-popup__container {
   max-width: 470px;
   position: relative;
   background-color: #FFF;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
-  .popup__container {
+  .card-popup__container {
     max-width: 282px;
   }
 }
