--- a/blocks/card-popup/__form/card-popup__form.css
+++ b/blocks/card-popup/__form/card-popup__form.css
@@ -1,11 +1,11 @@
-.popup__form {
+.card-popup__form {
     width: 430px;
     display: flex;
     flex-direction: column;
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
-    .popup__form {
+    .card-popup__form {
         max-width: 282px;
     }
 }
