--- a/blocks/card-popup/__title/card-popup__title.css
+++ b/blocks/card-popup/__title/card-popup__title.css
@@ -1,4 +1,4 @@
-.popup-photo__title {
+.card-popup__title {
     max-width: 330px;
     margin: 34px auto 54px 36px;
     font-style: normal;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
-    .popup-photo__title {
+    .card-popup__title {
         max-width: 238px;
         margin: 25px auto 75px;
         font-size: 18px;
