--- a/blocks/profile-popup/__container/profile-popup__container.css
+++ b/blocks/profile-popup/__container/profile-popup__container.css
@@ -1,4 +1,4 @@
-.popup-photo__container {
+.profile-popup__container {
   max-width: 470px;
   position: relative;
   background-color: #FFF;
@@ -7,7 +7,7 @@
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
-  .popup-photo__container {
+  .profile-popup__container {
     max-width: 282px;
   }
 }
