--- a/blocks/profile-popup/__title/profile-popup__title.css
+++ b/blocks/profile-popup/__title/profile-popup__title.css
@@ -1,4 +1,4 @@
-.popup__title {
+.profile-popup__title {
     max-width: 330px;
     margin: 34px auto 39px;
     font-style: normal;
@@ -9,7 +9,7 @@
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
-    .popup__title {
+    .profile-popup__title {
         max-width: 238px;
         margin: 25px auto 75px;
         font-size: 18px;
