--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,11 +1,11 @@
-.profile-popup__form {
+.popup__form {
     width: 430px;
     display: flex;
     flex-direction: column;
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
-    .profile-popup__form {
+    .popup__form {
         max-width: 282px;
     }
 }
