--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,9 +1,9 @@
-.card-popup__form-input {
+.popup__input {
     width: 358px;
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     padding: 0 0 13px;
-    margin: 0 auto 30px;
+    margin: 0 auto 17px;
     background-color: transparent;
     outline: none;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -14,8 +14,13 @@
     color: #000000;
 }
 
+.popup__input:last-of-type {
+    margin-bottom: 0;
+    margin-top: 13px;
+}
+
 @media screen and (max-width: 569px) and (min-width: 320px) {
-    .card-popup__form-input {
+    .popup__input {
         max-width: 238px;
     }
 }
