--- a/page/index.css
+++ b/page/index.css
@@ -21,18 +21,20 @@
 @import url(../blocks/element/__title/element__title.css);
 @import url(../blocks/element/__like/element__like.css);
 @import url(../blocks/element/__like/_active/element__like_active.css);
+@import url(../blocks/error/error.css);
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__close/popup__close.css);
 @import url(../blocks/popup/__button-save/popup__button-save.css);
+@import url(../blocks/popup/__button-save/_disabled/popup__button-save_disabled.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/popup/__input/popup__input.css);
+@import url(../blocks/popup/__input/_type_error/popup__input_type_error.css);
+@import url(../blocks/popup/__error-visible/popup__error-visible.css);
 @import url(../blocks/profile-popup/__container/profile-popup__container.css);
 @import url(../blocks/profile-popup/__title/profile-popup__title.css);
-@import url(../blocks/profile-popup/__form/profile-popup__form.css);
-@import url(../blocks/profile-popup/__form-input/profile-popup__form-input.css);
 @import url(../blocks/card-popup/__container/card-popup__container.css);
 @import url(../blocks/card-popup/__title/card-popup__title.css);
-@import url(../blocks/card-popup/__form/card-popup__form.css);
-@import url(../blocks/card-popup/__form-input/card-popup__form-input.css);
 @import url(../blocks/image-popup/__container/image-popup__container.css);
 @import url(../blocks/image-popup/__title/image-popup__title.css);
 @import url(../blocks/image-popup/__photo/image-popup__photo.css);
