--- a/blocks/elements/__list/elements__list.css
+++ b/blocks/elements/__list/elements__list.css
@@ -2,14 +2,15 @@
     padding: 0;
     margin: 47px auto 0;
     list-style: none;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(3, 282px);
+    justify-content: center;
     gap: 17px;
 }
 
 @media screen and (max-width: 900px) and (min-width: 320px) {
     .elements__list {
-        justify-content: space-around;
+        grid-template-columns: repeat(2, 282px);
     }
 }
   
@@ -17,6 +18,7 @@
 @media screen and (max-width: 320px) {
     .elements__list {
         margin: 36px auto 0;
+        grid-template-columns: 282px;
         justify-content: center;
         gap: 20px;
     }
