--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -2,6 +2,7 @@
     width: 430px;
     display: flex;
     flex-direction: column;
+    gap: 5px;
 }
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
