--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -3,7 +3,7 @@
     border: none;
     border-bottom: 1px solid rgba(0, 0, 0, .2);
     padding: 0 0 13px;
-    margin: 0 auto 17px;
+    margin: 0 auto;
     background-color: transparent;
     outline: none;
     font-family: 'Inter', 'Arial', sans-serif;
@@ -14,13 +14,9 @@
     color: #000000;
 }
 
-.popup__input:last-of-type {
-    margin-bottom: 0;
-    margin-top: 13px;
-}
 
 @media screen and (max-width: 569px) and (min-width: 320px) {
     .popup__input {
         max-width: 238px;
-    }
-}
+    };
+};
