--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -18,5 +18,5 @@
 @media screen and (max-width: 569px) and (min-width: 320px) {
     .popup__input {
         max-width: 238px;
-    };
-};
+    }
+}
