--- a/src/blocks/element/__like/element__like.css
+++ b/src/blocks/element/__like/element__like.css
@@ -1,7 +1,7 @@
 .element__like {
     width: 22px;
     height: 19px;
-    margin-right: 18px;
+    margin:22px 18px 38px 0;
     background-image: url(../../../images/like.svg);
     background-repeat: no-repeat;
     background-size: contain;
