--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,4 +1,9 @@
 .profile__avatar {
-    max-width: 120px;
+    height: 120px;
+    width: 120px;
     border-radius: 50%;
+}
+
+.profile__avatar:hover {
+    opacity: 0.2;
 }
