--- a/src/blocks/profile/__info-edit-button/profile__info-edit-button.css
+++ b/src/blocks/profile/__info-edit-button/profile__info-edit-button.css
@@ -2,6 +2,7 @@
     width: 24px;
     height: 24px;
     margin-left: 18px;
+    margin-top: -30px;
     border: 1px solid #FFFFFF;
     background-image: url(../../../images/pencil.svg);
     background-position: center;
@@ -14,10 +15,10 @@
     opacity: 0.6;
 }
 
-@media screen and (max-width: 569px) and (min-width: 320px) {
+@media screen and (max-width: 590px) and (min-width: 320px) {
     .profile__info-edit-button {
         width: 18px;
         height: 18px;
-        margin: 8px 19px 0 10px;
+        margin: 8px 15px 0 15px;
     }
 }
