--- a/src/blocks/profile/__info/profile__info.css
+++ b/src/blocks/profile/__info/profile__info.css
@@ -4,19 +4,21 @@
     display: flex;
     flex-wrap: wrap;
     align-items: baseline;
+    flex-direction: column;
 }
 
-@media screen and (max-width: 900px) and (min-width: 570px) {
+@media screen and (max-width: 900px) and (min-width: 590px) {
     .profile__info {
        margin-left: 15px;
     }
 }
   
-@media screen and (max-width: 569px) and (min-width: 320px) {
+@media screen and (max-width: 589px) and (min-width: 320px) {
     .profile__info {
         max-width: 282px;
         width: 100%;
         margin: 22px 0 0;
-        justify-content: flex-end;
+        justify-content: center;
+        flex-direction: row;
     }
 }
