--- a/src/blocks/popup/__button-save/popup__button-save.css
+++ b/src/blocks/popup/__button-save/popup__button-save.css
@@ -1,29 +1,25 @@
 .popup__button-save {
-    width: 358px;
-    height: 50px;
-    margin: 13px auto 37px;
-    padding: 0;
-    border: none;
-    background: #000000;
-    border-radius: 2px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
-    text-align: center;
-    color: #FFFFFF;
-    cursor: pointer;
-  }
-  
-  .popup__button-save:hover {
-    opacity: 0.8;
-  }
+  width: 100%;
+  background-color: #000;
+  font-size: 18px;
+  color: #fff;
+  border: none;
+  border-radius: 2px;
+  padding: 16px 13px;
+  margin-top: 47px;
+  cursor: pointer;
+}
 
-  @media screen and (max-width: 569px) and (min-width: 320px) {
-    .popup__button-save {
-      max-width: 238px;
-      margin: 10px auto 25px;
-      font-size: 14px;
-      line-height: 17px;
-    }
+.popup__button-save:hover {
+  opacity: 0.8;
+}
+
+@media screen and (max-width: 569px) and (min-width: 320px) {
+  .popup__button-save {
+    max-width: 238px;
+    margin-top: 44px;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 14px 12px;
   }
+}
