--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -1,22 +1,11 @@
 .popup__input {
-    width: 358px;
-    border: none;
-    border-bottom: 1px solid rgba(0, 0, 0, .2);
-    padding: 0 0 13px;
-    margin: 0 auto;
-    background-color: transparent;
-    outline: none;
-    font-family: 'Inter', 'Arial', sans-serif;
-    font-style: normal;
-    font-weight: 400;
+    width: 100%;
     font-size: 14px;
     line-height: 17px;
     color: #000000;
-}
-
-
-@media screen and (max-width: 569px) and (min-width: 320px) {
-    .popup__input {
-        max-width: 238px;
-    }
+    border: none;
+    outline: none;
+    border-bottom: 1px solid rgba(0, 0, 0, .2);
+    padding: 40px 0 13px;
+    background-color: transparent;
 }
