--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     position: fixed;
@@ -11,4 +12,5 @@
     opacity: 0;
     visibility: hidden;
     transition: all 0.3s linear;
+    z-index: 1;
 }
