--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@
 .header__logo{margin-bottom:35px;max-height:33px;max-width:142px}@media screen and (max-width:900px){.header__logo{margin-left:27px}}@media screen and (max-width:320px){.header__logo{margin-bottom:28px;max-height:24px;max-width:104px}}
 .content{display:block;margin-bottom:66px}@media screen and (max-width:320px){.content{margin-bottom:48px}}
 .profile{align-items:center;display:flex;flex-direction:row;margin:40px auto 0;max-width:880px;width:100%}@media screen and (max-width:900px) and (min-width:590px){.profile{justify-content:space-around;width:96%}}@media screen and (max-width:589px) and (min-width:320px){.profile{flex-direction:column;margin:42px auto 0;max-width:282px}}
-.profile__avatar{border-radius:50%;height:120px;width:120px}.profile__avatar:hover{opacity:.8}
+.profile__avatar{border-radius:50%;height:120px;width:120px}.profile__avatar:hover{opacity:.2}
 .profile__edit-avatar-button{background-color:transparent;background-image:url(fonts/pencil.8667ac4a523e8fc42e59..svg);background-position:50%;background-repeat:no-repeat;background-size:26px;border:0;border-radius:50%;cursor:pointer;max-width:120px;padding:0}
 .profile__info{align-items:baseline;display:flex;flex-direction:column;flex-wrap:wrap;margin-left:30px;max-width:336px}@media screen and (max-width:900px) and (min-width:590px){.profile__info{margin-left:15px}}@media screen and (max-width:589px) and (min-width:320px){.profile__info{flex-direction:row;justify-content:center;margin:22px 0 0;max-width:282px;width:100%}}
 .profile__title{color:#fff;font-size:42px;font-style:normal;font-weight:500;line-height:48px;margin:0;max-width:294px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:900px) and (min-width:569px){.profile__title{font-size:calc(1.56087vw + 22.0052px);max-width:189px}}@media screen and (max-width:569px) and (min-width:320px){.profile__title{font-size:27px;line-height:33px;max-width:189px}}
@@ -23,7 +23,7 @@
 .element__like{background-color:transparent;background-image:url(fonts/like.87ed371465c7a6a1cd01..svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:19px;margin:22px 18px 38px 0;width:22px}.element__like:hover{opacity:.5}
 .element__like_active{background-image:url(fonts/likeactivicon.bdb34c2e1b9db34a7fed..jpg)}.element__like_active:hover{opacity:1}
 .element__like-counter{color:#000;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin-top:21px;max-width:10px;text-align:center}
-.popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .3s linear;visibility:hidden;width:100%}
+.popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;flex-direction:column;height:100%;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .3s linear;visibility:hidden;width:100%;z-index:1}
 .popup_opened{opacity:1;visibility:visible}
 .popup__container{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;color:#000;font-family:Inter,Arial,sans-serif;padding:34px 36px 37px;position:relative;width:430px}@media screen and (max-width:570px) and (min-width:320px){.popup__container{max-width:282px;padding:25px 22px;width:100%}}
 .popup__title{font-size:24px;font-weight:900;line-height:29px;margin:0 0 13px}@media screen and (max-width:570px) and (min-width:320px){.popup__title{font-size:18px;line-height:22px;margin:0 0 34px}}
