--- a/src/blocks/popup/__container/popup__container.css
+++ b/src/blocks/popup/__container/popup__container.css
@@ -1,12 +1,13 @@
 .popup__container {
     position: relative;
-    width: 430px;
+    max-width: 430px;
+    width: 100%;
+    min-height: 181px;
     background: #fff;
-    color: #000;
-    font-family: 'Inter', Arial, sans-serif;
-    padding: 34px 36px 37px;
-    box-sizing: border-box;
     border-radius: 10px;
+    color: #000;
+    padding: 34px 36px;
+    box-sizing: border-box;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
 }
 
