--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,6 +1,5 @@
 .popup {
-    width: 100vw;
-    height: 100vh;
+    font-family: 'Inter', Arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
