--- a/main.css
+++ b/main.css
@@ -23,8 +23,8 @@
 .element__like{background-color:transparent;background-image:url(fonts/like.87ed371465c7a6a1cd01..svg);background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:19px;margin:22px 18px 38px 0;width:22px}.element__like:hover{opacity:.5}
 .element__like_active{background-image:url(fonts/likeactivicon.bdb34c2e1b9db34a7fed..jpg)}.element__like_active:hover{opacity:1}
 .element__like-counter{color:#000;font-size:13px;font-style:normal;font-weight:400;line-height:16px;margin-top:21px;max-width:10px;text-align:center}
-.popup{align-items:center;background-color:rgba(0,0,0,.5);display:flex;font-family:Inter,Arial,sans-serif;justify-content:center;left:0;opacity:0;position:fixed;top:0;transition:all .3s linear;visibility:hidden;z-index:1}
-.popup_opened{opacity:1;visibility:visible}
+.popup{align-items:center;background-color:rgba(0,0,0,.5);bottom:0;display:flex;font-family:Inter,Arial,sans-serif;justify-content:center;left:0;opacity:0;position:fixed;right:0;top:0;transition:all .3s linear;visibility:hidden;z-index:1}
+.popup_opened{display:flex;opacity:1;visibility:visible}
 .popup__container{background:#fff;border-radius:10px;box-shadow:0 0 25px rgba(0,0,0,.15);box-sizing:border-box;color:#000;max-width:430px;min-height:181px;padding:34px 36px;position:relative;width:100%}@media screen and (max-width:584px) and (min-width:320px){.popup__container{max-width:282px;padding:25px 22px;width:100%}}
 .popup__title{font-size:24px;font-weight:900;line-height:29px;margin:0 0 13px}@media screen and (max-width:570px) and (min-width:320px){.popup__title{font-size:18px;line-height:22px;margin:0 0 34px}}
 .popup__close{background-color:transparent;background-image:url(fonts/CloseIcon.b793e07c3f4c19e26c11..svg);background-repeat:no-repeat;background-size:cover;border:none;cursor:pointer;height:32px;margin-bottom:8px;margin-left:8px;padding:0;position:absolute;right:-40px;top:-40px;width:32px}.popup__close:hover{opacity:.7}@media screen and (max-width:569px) and (min-width:320px){.popup__close{height:20px;margin-bottom:16px;margin-left:0;right:0;width:20px}}
